hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__length@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i8*, i64 } @_hl.main.1(i8* %0) {
alloca_block:
  %"0" = alloca i8*, align 8
  %"1" = alloca i64, align 8
  %"2_0" = alloca i8*, align 8
  %"4_0" = alloca i8*, align 8
  %"4_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8* %0, i8** %"2_0", align 8
  %"2_01" = load i8*, i8** %"2_0", align 8
  %1 = call i64 @__rt__list__length(i8* %"2_01")
  store i8* %"2_01", i8** %"4_0", align 8
  store i64 %1, i64* %"4_1", align 4
  %"4_02" = load i8*, i8** %"4_0", align 8
  %"4_13" = load i64, i64* %"4_1", align 4
  store i8* %"4_02", i8** %"0", align 8
  store i64 %"4_13", i64* %"1", align 4
  %"04" = load i8*, i8** %"0", align 8
  %"15" = load i64, i64* %"1", align 4
  %mrv = insertvalue { i8*, i64 } undef, i8* %"04", 0
  %mrv6 = insertvalue { i8*, i64 } %mrv, i64 %"15", 1
  ret { i8*, i64 } %mrv6
}

declare i64 @__rt__list__length(i8*)
