hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__length@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { ptr, i64 } @_hl.main.1(ptr %0) !dbg !3 {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca i64, align 8
  %"2_0" = alloca ptr, align 8
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %1 = call i64 @__rt__list__length(ptr %"2_01"), !dbg !11
  store ptr %"2_01", ptr %"4_0", align 8, !dbg !11
  store i64 %1, ptr %"4_1", align 4, !dbg !11
  %"4_02" = load ptr, ptr %"4_0", align 8
  %"4_13" = load i64, ptr %"4_1", align 4
  store ptr %"4_02", ptr %"0", align 8
  store i64 %"4_13", ptr %"1", align 4
  %"04" = load ptr, ptr %"0", align 8
  %"15" = load i64, ptr %"1", align 4
  %mrv = insertvalue { ptr, i64 } poison, ptr %"04", 0
  %mrv6 = insertvalue { ptr, i64 } %mrv, i64 %"15", 1
  ret { ptr, i64 } %mrv6
}

declare i64 @__rt__list__length(ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ ptr, i64 }", file: !2, size: 16, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!10 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!11 = !DILocation(line: 27062, column: 402, scope: !3)
