hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__push@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i8* @_hl.main.1(i8* %0, i16 %1) {
alloca_block:
  %"0" = alloca i8*, align 8
  %"2_0" = alloca i8*, align 8
  %"2_1" = alloca i16, align 2
  %"4_0" = alloca i8*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8* %0, i8** %"2_0", align 8
  store i16 %1, i16* %"2_1", align 2
  %"2_01" = load i8*, i8** %"2_0", align 8
  %"2_12" = load i16, i16* %"2_1", align 2
  %2 = alloca i16, align 2
  store i16 %"2_12", i16* %2, align 2
  %3 = bitcast i16* %2 to i8*
  call void @__rt__list__push(i8* %"2_01", i8* %3)
  store i8* %"2_01", i8** %"4_0", align 8
  %"4_03" = load i8*, i8** %"4_0", align 8
  store i8* %"4_03", i8** %"0", align 8
  %"04" = load i8*, i8** %"0", align 8
  ret i8* %"04"
}

declare void @__rt__list__push(i8*, i8*)
