hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__list__test__push@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/collections/list.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal ptr @_hl.main.1(ptr %0, i16 %1) {
alloca_block:
  %"0" = alloca ptr, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca i16, align 2
  %"4_0" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store i16 %1, ptr %"2_1", align 2
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load i16, ptr %"2_1", align 2
  %2 = alloca i16, align 2
  store i16 %"2_12", ptr %2, align 2
  call void @__rt__list__push(ptr %"2_01", ptr %2)
  store ptr %"2_01", ptr %"4_0", align 8
  %"4_03" = load ptr, ptr %"4_0", align 8
  store ptr %"4_03", ptr %"0", align 8
  %"04" = load ptr, ptr %"0", align 8
  ret ptr %"04"
}

declare void @__rt__list__push(ptr, ptr)
